# gnbc-tools

./: CLAUDE.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: release.yml  test.yml  typecheck.yml
src/gnbc_tools/: cli.py
tests/: test_cli.py  test_integration.py
