[project]
name = "gnbc-tools"
version = "0.4.0"
description = "GENIEEのbootcampで使う便利ツール"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "questionary>=2.0",
]

[project.scripts]
gnbc = "gnbc_tools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gnbc_tools"]

[dependency-groups]
dev = ["ty>=0.0.0a1", "pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ty.environment]
root = ["src"]
